--- a/mafia/index.html
+++ b/mafia/index.html
@@ -33,7 +33,7 @@
         <button id="next" onclick="next()">Next</button>
         <button id="mayor" onclick="mayor()">The Mayor Has Revealed.</button>
         <button id="blackmail" onclick="black()">A blackmailed player has talked / Manual kill</button>
-        <button id="disableMusic" onclick="(()=>{playMusic = ()=>{};oldAudio.pause();})()">Disable Music (unreversable)</button>
+        <button id="disableMusic" onclick="playMusic(true)">Start / Stop Music</button>
         <button type="button" id="hideNarrator" onclick="document.getElementById('narrator').style.display = 'none';document.getElementById('showNarrator').style.zIndex = '1';">X</button>
       </div>
       <button type="button" id="showNarrator" onclick="document.getElementById('narrator').style.display = 'block';document.getElementById('showNarrator').style.zIndex = '';">⏫</button>
@@ -202,6 +202,7 @@
     </style>
     <script>
       //html elements
+      let mus = document.getElementById("disableMusic");
       let nextButton = document.getElementById("next");
       nextButton.style.display = "none";
       let grave = document.getElementById("grave_list");
@@ -2212,11 +2213,17 @@
         document.body.append(d);
       }
       //music cuz who doesn't like music?
-      function playMusic(){
-        window.removeEventListener("click",playMusic);
-        window.removeEventListener("touchend",playMusic);
+      function playMusic(toggle){
+        if(toggle){
+          if(typeof(oldAudio) != "undefined"){
+            oldAudio.pause();
+            oldAudio = undefined;
+            return;
+          }
+        }
         if(typeof(oldAudio) != "undefined"){
           oldAudio.pause();
+          oldAudio = undefined;
         }
         let music = {
           lobby: ["HomepageMusic.mp3","LobbyMusic.mp3","LoginMusicCoven.mp3","SelectionMusic.mp3"],
@@ -2256,8 +2263,6 @@
         window.oldAudio = a;
         return a;
       }
-      window.addEventListener("click",playMusic);
-      window.addEventListener("touchend",playMusic);
     </script>
   </body>
 </html>
