Fixed wrong music

--- a/mafia/index.html
+++ b/mafia/index.html
@@ -2236,7 +2236,7 @@
           case "night":
           case "night2":
           if(turn == -1){
-            a = new Audio(music.lobby[Math.floor(Math.random() * music.lobby.length)]);
+            a = new Audio(music.night[Math.floor(Math.random() * music.night.length)]);
           }else{
             a = new Audio(music.night[Math.floor(Math.random() * music.night.length)]);
           }
